--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,9 @@ deps =
 	pylint
 	pytest
 commands =
-	pylint django_simple_paginator
+	pylint django_universal_paginator
 	coverage erase
-	coverage run --source=django_simple_paginator --branch run_tests.py
+	coverage run --source=django_universal_paginator --branch run_tests.py
 	coverage report -m --fail-under 100
 	coverage xml
 
