--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ requires = ["setuptools", "setuptools-scm", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["django_universal_paginator"]
+packages = ["django_universal_paginator", "django_universal_paginator.templates.paginator", "django_universal_paginator.templatetags"]
 
 [tool.setuptools_scm]
 
